--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,6 +15,20 @@
 </head>
 
 <body>
+    <!-- header bar with link to logout on the right -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">Workout Tracker</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/dashboard">Dashboard</a>
+                </li>
+                <li class="nav-item-logout">
+                    <a class="nav-link" href="/auth/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
         <%- body %>
     </div>
