--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,6 +29,47 @@
           <input type="password" id="password2" name="password2" class="form-control" placeholder="Confirm Password"
             value="<%= typeof password2 != 'undefined' ? password2 : '' %>" />
         </div>
+        <div class="form-group">
+          <label for="weight">Weight</label>
+          <input type="weight" id="weight" name="weight" class="form-control" placeholder="Enter Weight"
+            value="<%= typeof weight != 'undefined' ? weight : '' %>" />
+        </div>
+        <div class="form-group">
+          <label for="height">Height</label>
+          <!-- create dropdown range 0-7-->
+          <select id="feet" name="feet" class="form-control">
+            <option value="">Select Height in feet</option>
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+          </select>
+          <!-- create dropdown range 0-11-->
+          <select id="inches" name="inches" class="form-control">
+            <option value="">Select Height in inches</option>
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+            <option value="11">11</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="age">Age</label>
+          <input type="age" id="age" name="age" class="form-control" placeholder="Enter Age"
+            value="<%= typeof age != 'undefined' ? age : '' %>" />
+        </div>
         <button type="submit" class="btn btn-primary btn-block">
           Register
         </button>
