Cleaning up routes and controllers

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,3 +1,4 @@
+<p><%= workoutList %></p>
 <h1 class="mt-4">Edit</h1>
 <p class="lead mb-4">Welcome <%= name %></p>
 <p class = "lead mb-4">Your id is <%= id %></p>
