--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,6 +23,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/dashboard">Dashboard</a>
                 </li>
+                <!--Add dropdown for Stats with options: Weight, Lifting, Cardio-->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Stats
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/stats/weight">Weight</a>
+                        <a class="dropdown-item" href="/stats/lifting">Lifting</a>
+                        <a class="dropdown-item" href="/stats/cardio">Cardio</a>
+                    </div>
+                </li>
                 <li class="nav-item-logout">
                     <a class="nav-link" href="/auth/logout">Logout</a>
                 </li>
