--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,7 +16,7 @@
 
 <body>
     <!-- header bar with link to logout on the right -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-expand navbar-dark bg-dark">
         <a class="navbar-brand" href="/">Workout Tracker</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
