--- a/views/weight.ejs
+++ b/views/weight.ejs
@@ -4,7 +4,8 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <%- include ("./messages") %>
 <br>
-<canvas id="myChart" ></canvas>
+<canvas id="weightChart" ></canvas>
+
 <script>
     const labels = [<% for (let i = 0; i < weights.length; i++) { %>"<%= moment(weights[i].createdAt).format('MM/D/YY') %>",<% } %>];
   
@@ -39,7 +40,7 @@
 </script>
 <script>
   const myChart = new Chart(
-    document.getElementById('myChart'),
+    document.getElementById('weightChart'),
     config
   );
 </script>
